// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeDropDown render with all props 1`] = `
<SimpleDropdown
  className="some-class"
  id="some-id"
  initialItems={
    Array [
      Object {
        "content": "24h",
        "onClick": [Function],
        "value": "H24",
      },
      Object {
        "content": "12h",
        "onClick": [Function],
        "value": "H12",
      },
      Object {
        "content": "week",
        "onClick": [Function],
        "value": "WEEK",
      },
    ]
  }
  popperProps={
    Object {
      "position": "right",
    }
  }
  toggleContent="week"
  toggleVariant="plainText"
/>
`;

exports[`TimeDropDown render with minimal props 1`] = `
<SimpleDropdown
  className=""
  id="some-id"
  initialItems={
    Array [
      Object {
        "content": "24h",
        "onClick": [Function],
        "value": "H24",
      },
      Object {
        "content": "12h",
        "onClick": [Function],
        "value": "H12",
      },
      Object {
        "content": "week",
        "onClick": [Function],
        "value": "WEEK",
      },
    ]
  }
  popperProps={
    Object {
      "position": "right",
    }
  }
  toggleContent="24h"
  toggleVariant="plainText"
/>
`;
